--- a/index.html
+++ b/index.html
@@ -1,68 +1,302 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Sunnyside agency landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  About
-  Services
-  Projects
-  Contact
-
-  We are creatives
-
-  Transform your brand
-
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
-
-  Learn more
-
-  Stand out to the right audience
-
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-
-  About
-  Services
-  Projects
-  Contact
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <!-- Displays site properly based on user's device -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Author and description -->
+    <meta name="author" content="Brayan Miza" />
+    <meta
+      name="description"
+      content="This is my solution to the Sunnyside agency landing page challenge on Frontend Mentor."
+    />
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./style.css" />
+    <!-- Script -->
+    <script defer src="./script.js"></script>
+    <!-- Title   -->
+    <title>Frontend Mentor | Sunnyside agency landing page</title>
+  </head>
+  <body>
+    <header class="header">
+      <div class="header__navigation">
+        <a
+          class="header__navigation-logo"
+          href="#"
+          aria-label="Sunnyside homepage."
+        >
+          <img src="./images/logo.svg" alt="" />
+        </a>
+        <nav class="header__navigation-links">
+          <ul>
+            <li>
+              <a class="header__navigation-link" href="#">About</a>
+            </li>
+            <li>
+              <a class="header__navigation-link" href="#">Services</a>
+            </li>
+            <li>
+              <a class="header__navigation-link" href="#">Projects</a>
+            </li>
+            <li>
+              <a class="header__navigation-link header__contact-link" href="#"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <button
+          class="header__navigation-menu"
+          aria-label="Menu"
+          aria-expanded="false"
+        >
+          <img src="./images/icon-hamburger.svg" alt="" />
+        </button>
+      </div>
+      <h1>We are creatives</h1>
+      <div class="header__btn-down">
+        <a href="#services" aria-label="Go to services.">
+          <img src="./images/icon-arrow-down.svg" alt="" />
+        </a>
+      </div>
+    </header>
+    <main>
+      <section id="services">
+        <h2 class="visually-hidden">Services</h2>
+        <article class="services__article" data-title="transform">
+          <picture>
+            <source
+              media="(min-width:768px)"
+              srcset="./images/desktop/image-transform.jpg"
+            />
+            <img src="./images/mobile/image-transform.jpg" alt="" />
+          </picture>
+          <div class="services__article-info">
+            <h3>Transform your brand</h3>
+            <p>
+              We are a full-service creative agency specializing in helping
+              brands grow fast. Engage your clients through compelling visuals
+              that do most of the marketing for you.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+        </article>
+        <article class="services__article" data-title="stand-out">
+          <picture>
+            <source
+              media="(min-width:768px)"
+              srcset="./images/desktop/image-stand-out.jpg"
+            />
+            <img src="./images/mobile/image-stand-out.jpg" alt="" />
+          </picture>
+          <div class="services__article-info">
+            <h3>Stand out to the right audience</h3>
+            <p>
+              Using a collaborative formula of designers, researchers,
+              photographers, videographers, and copywriters, we’ll build and
+              extend your brand in digital places.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+        </article>
+        <article class="services__article-no-link" data-title="graphic-design">
+          <picture>
+            <source
+              media="(min-width:768px)"
+              srcset="./images/desktop/image-stand-out.jpg"
+            />
+            <img src="./images/mobile/image-graphic-design.jpg" alt="" />
+          </picture>
+          <div class="services__article-no-link-info">
+            <h3>Graphic Design</h3>
+            <p>
+              Great design makes you memorable. We deliver artwork that
+              underscores your brand message and captures potential clients’
+              attention.
+            </p>
+          </div>
+        </article>
+        <article class="services__article-no-link" data-title="photography">
+          <picture>
+            <source
+              media="(min-width:768px)"
+              srcset="./images/desktop/image-photography.jpg"
+            />
+            <img src="./images/mobile/image-photography.jpg" alt="" />
+          </picture>
+          <div class="services__article-no-link-info">
+            <h3>Photography</h3>
+            <p>
+              Increase your credibility by getting the most stunning,
+              high-quality photos that improve your business image.
+            </p>
+          </div>
+        </article>
+      </section>
+      <section class="testimonials">
+        <h2>Client testimonials</h2>
+        <ul class="testimonials__list">
+          <li class="testimonials__testimonial">
+            <img
+              src="./images/image-emily.jpg"
+              alt="Satisfied client Emily R."
+            />
+            <figure>
+              <blockquote>
+                <p>
+                  We put our trust in Sunnyside and they delivered, making sure
+                  our needs were met and deadlines were always hit.
+                </p>
+              </blockquote>
+              <figcaption>
+                <p class="testimonial__client">Emily R.</p>
+                <small>Marketing Director</small>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="testimonials__testimonial">
+            <img
+              src="./images/image-thomas.jpg"
+              alt="Satisfied client Thomas S."
+            />
+            <figure>
+              <blockquote>
+                <p>
+                  Sunnyside’s enthusiasm coupled with their keen interest in our
+                  brand’s success made it a satisfying and enjoyable experience.
+                </p>
+              </blockquote>
+              <figcaption>
+                <p class="testimonial__client">Thomas S.</p>
+                <small>Chief Operating Officer</small>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="testimonials__testimonial">
+            <img
+              src="./images/image-jennie.jpg"
+              alt="Satisfied client Jennie F."
+            />
+            <figure>
+              <blockquote>
+                <p>
+                  Incredible end result! Our sales increased over 400% when we
+                  worked with Sunnyside. Highly recommended!
+                </p>
+              </blockquote>
+              <figcaption>
+                <p class="testimonial__client">Jennie F.</p>
+                <small>Business Owner</small>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
+      <section class="gallery">
+        <h2 class="visually-hidden">Gallery</h2>
+        <div class="gallery__grid">
+          <picture>
+            <source
+              media="(min-width:768px)"
+              srcset="./images/desktop/image-gallery-milkbottles.jpg"
+            />
+            <img
+              src="./images/mobile/image-gallery-milkbottles.jpg"
+              alt="Five aligned milk bottles with red cap with a blue sky background with clouds"
+            />
+          </picture>
+          <picture>
+            <source
+              media="(min-width:768px)"
+              srcset="./images/desktop/image-gallery-orange.jpg"
+            />
+            <img
+              src="./images/mobile/image-gallery-orange.jpg"
+              alt="An orange table with a white and blue dish and on the top is an orange."
+            />
+          </picture>
+          <picture>
+            <source
+              media="(min-width:768px)"
+              srcset="./images/desktop/image-gallery-cone.jpg"
+            />
+            <img
+              src="./images/mobile/image-gallery-cone.jpg"
+              alt="A waffle cone with no ice cream in a with a blue background"
+            />
+          </picture>
+          <picture>
+            <source
+              media="(min-width:768px)"
+              srcset="./images/desktop/image-gallery-sugarcubes.jpg"
+            />
+            <img
+              src="./images/mobile/image-gallery-sugar-cubes.jpg"
+              alt="A pile of several sugar cubes with a red background"
+            />
+          </picture>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <a href="#" aria-label="Sunnyside homepage.">
+        <img class="footer__logo" src="./images/logo.svg" alt="" />
+      </a>
+      <nav>
+        <ul class="footer__navigation-list">
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Services</a>
+          </li>
+          <li>
+            <a href="#">Projects</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li>
+          <a href="#" aria-label="Sunnyside, Facebook page.">
+            <img src="./images/icon-facebook.svg" alt="" />
+          </a>
+        </li>
+        <li>
+          <a href="#" aria-label="Sunnyside, Instagram page.">
+            <img src="./images/icon-instagram.svg" alt="" />
+          </a>
+        </li>
+        <li>
+          <a href="#" aria-label="Sunnyside, Twitter page.">
+            <img src="./images/icon-twitter.svg" alt="" />
+          </a>
+        </li>
+        <li>
+          <a href="#" aria-label="Sunnyside, Pinterest page.">
+            <img src="./images/icon-pinterest.svg" alt="" />
+          </a>
+        </li>
+      </ul>
+    </footer>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/bramizdev">@bramizdev</a>.
+    </div>
+  </body>
 </html>
