--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <article class="services__article" data-title="transform">
           <picture>
             <source
-              media="(min-width:768px)"
+              media="(min-width:750px)"
               srcset="./images/desktop/image-transform.jpg"
             />
             <img src="./images/mobile/image-transform.jpg" alt="" />
@@ -98,7 +98,7 @@
         <article class="services__article" data-title="stand-out">
           <picture>
             <source
-              media="(min-width:768px)"
+              media="(min-width:750px)"
               srcset="./images/desktop/image-stand-out.jpg"
             />
             <img src="./images/mobile/image-stand-out.jpg" alt="" />
@@ -113,39 +113,44 @@
             <a href="#">Learn more</a>
           </div>
         </article>
-        <article class="services__article-no-link" data-title="graphic-design">
-          <picture>
-            <source
-              media="(min-width:768px)"
-              srcset="./images/desktop/image-stand-out.jpg"
-            />
-            <img src="./images/mobile/image-graphic-design.jpg" alt="" />
-          </picture>
-          <div class="services__article-no-link-info">
-            <h3>Graphic Design</h3>
-            <p>
-              Great design makes you memorable. We deliver artwork that
-              underscores your brand message and captures potential clients’
-              attention.
-            </p>
-          </div>
-        </article>
-        <article class="services__article-no-link" data-title="photography">
-          <picture>
-            <source
-              media="(min-width:768px)"
-              srcset="./images/desktop/image-photography.jpg"
-            />
-            <img src="./images/mobile/image-photography.jpg" alt="" />
-          </picture>
-          <div class="services__article-no-link-info">
-            <h3>Photography</h3>
-            <p>
-              Increase your credibility by getting the most stunning,
-              high-quality photos that improve your business image.
-            </p>
-          </div>
-        </article>
+        <div class="services__no-links">
+          <article
+            class="services__article-no-link"
+            data-title="graphic-design"
+          >
+            <picture>
+              <source
+                media="(min-width:750px)"
+                srcset="./images/desktop/image-graphic-design.jpg"
+              />
+              <img src="./images/mobile/image-graphic-design.jpg" alt="" />
+            </picture>
+            <div class="services__article-no-link-info">
+              <h3>Graphic Design</h3>
+              <p>
+                Great design makes you memorable. We deliver artwork that
+                underscores your brand message and captures potential clients’
+                attention.
+              </p>
+            </div>
+          </article>
+          <article class="services__article-no-link" data-title="photography">
+            <picture>
+              <source
+                media="(min-width:750px)"
+                srcset="./images/desktop/image-photography.jpg"
+              />
+              <img src="./images/mobile/image-photography.jpg" alt="" />
+            </picture>
+            <div class="services__article-no-link-info">
+              <h3>Photography</h3>
+              <p>
+                Increase your credibility by getting the most stunning,
+                high-quality photos that improve your business image.
+              </p>
+            </div>
+          </article>
+        </div>
       </section>
       <section class="testimonials">
         <h2>Client testimonials</h2>
@@ -211,7 +216,7 @@
         <div class="gallery__grid">
           <picture>
             <source
-              media="(min-width:768px)"
+              media="(min-width:750px)"
               srcset="./images/desktop/image-gallery-milkbottles.jpg"
             />
             <img
@@ -221,7 +226,7 @@
           </picture>
           <picture>
             <source
-              media="(min-width:768px)"
+              media="(min-width:750px)"
               srcset="./images/desktop/image-gallery-orange.jpg"
             />
             <img
@@ -231,7 +236,7 @@
           </picture>
           <picture>
             <source
-              media="(min-width:768px)"
+              media="(min-width:750px)"
               srcset="./images/desktop/image-gallery-cone.jpg"
             />
             <img
@@ -241,7 +246,7 @@
           </picture>
           <picture>
             <source
-              media="(min-width:768px)"
+              media="(min-width:750px)"
               srcset="./images/desktop/image-gallery-sugarcubes.jpg"
             />
             <img
